--- a/surf/css/style.css
+++ b/surf/css/style.css
@@ -170,12 +170,13 @@ main {
 }
 #pop-info{
     color: white;
-    padding-top: 90px;
+    padding-top: 70px;
     text-align: center;
     position: absolute;
     cursor: pointer;
-    width: 200px;
-    height: 200px;
+    font-weight: bolder;
+    width: 160px;
+    height: 160px;
     z-index: 1;
     border: 0;
     margin: 0;
