--- a/surf/css/style.css
+++ b/surf/css/style.css
@@ -180,7 +180,7 @@ main {
     z-index: 1;
     border: 0;
     margin: 0;
-    background-color: rgb(157, 116, 174);
+    background: rgb(157, 116, 174) center;
     border-radius: 50%;
     display: none;
     /*To remove on tap blue color*/
