--- a/surf/css/content.css
+++ b/surf/css/content.css
@@ -103,13 +103,120 @@
 .about img{
     width: 100%;
 }
+.profile{
+    margin: 80px 0 40px 0;
+    display: flex;
+    justify-content: space-between;
+}
+.profile div{
+    margin: auto;
+    font-size: 20px;
+}
+.profile #c{
+    width: 100%;
+    height: 100%;
+}
+.details{
+    padding: 1rem;
+}
 @media screen and (max-width:768px){
     .about{
         flex-direction: column-reverse;
     }
-    .about div{
+    .profile{
+        flex-direction: column;
+    }
+    
+    .profile #c{
+        width: 100%;
+        height: 80vh;
+    }
+    .about div,.profile div{
         margin: auto;
         font-size: 16px;
     }
     
+}
+
+
+/* CARD DESIGN */
+
+.card {
+background: #fff;
+border-radius: 4px;
+box-shadow: 0px 10px 80px rgba(34, 35, 58, 0.5);
+max-width: 400px;
+display: flex;
+flex-direction: row;
+border-radius: 25px;
+position: relative;
+}
+.card h2 {
+padding: 0 1rem;
+}
+.card .title {
+padding: 1rem;
+text-align: right;
+color: green;
+font-weight: bold;
+font-size: 12px;
+}
+.card .desc {
+padding: 0.5rem 1rem;
+font-size: 12px;
+}
+.card .actions {
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+align-items: center;
+padding: 0.5rem 1rem;
+}
+
+.img-avatar {
+width: 80px;
+height: 80px;
+position: absolute;
+border-radius: 50%;
+border: 6px solid white;
+background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
+top: 15px;
+left: 85px;
+}
+
+.card-text {
+display: grid;
+grid-template-columns: 1fr 2fr;
+}
+
+.title-total {
+padding: 2.5em 1.5em 1.5em 1.5em;
+}
+
+
+.card button img {
+width: 30px;
+}
+
+.portada {
+width: 100%;
+height: 100%;
+border-top-left-radius: 20px;
+border-bottom-left-radius: 20px;
+background-image: url("https://m.media-amazon.com/images/S/aplus-media/vc/cab6b08a-dd8f-4534-b845-e33489e91240._CR75,0,300,300_PT0_SX300__.jpg");
+background-position: bottom center;
+background-size: cover;
+}
+
+.card button {
+border: none;
+background: none;
+font-size: 24px;
+color: #8bc34a;
+cursor: pointer;
+transition:.5s;
+
+}
+.card button:hover{
+color: #4CAF50  ;
+transform: rotate(22deg)
 }
