--- a/surf/css/search.css
+++ b/surf/css/search.css
@@ -1,48 +1,54 @@
+.searching{
+    display: flex;
+    flex-direction: column;
+    /* text-align: center; */
+    width: 100%;
+}
+/* ***********Earth canvas on explore page********** */
+
+.search_earth{
+    margin: auto;
+    outline: none;
+    height: 500px;
+    width: 500px;
+    background-color: cadetblue;
+}
+@media screen and (max-width:768px){
+    .search_earth{
+        margin: none;
+        width: 100%;
+    }
+}
 /************Search bar*******/
 
-.boxcontainer{
+.search_bar{
     margin:auto;
     margin-top:20vh;
-    margin-bottom: -20px;
-    /* position:relative; */
     width:300px;
     height:42px;
     border:2px solid #2980b9;
-    padding:0px 10px;
     border-radius:50px;
+    display: flex;
 }
-
-.elementcontainer{
-    width:100%;
-    height:100%;
-    vertical-align:middle;
+.search_bar button{
+    border: none;
+    background:none;
+    margin-right:10px;
 }
-
+.search_bar img{
+    width: 22px;
+}
 .search{
     border:none;
     height:100%;
     width:100%;
     padding:0px 5px;
     border-radius:50px;
-    font-size:18px;
-    font-family:"Nunito";
+    font-size:17px;
     color:#424242;
     font-weight:500;
 }
-
-.search:focus{
-    outline:none;
+.search_bar input::-webkit-calendar-picker-indicator {
+    display: none;
 }
 
-.material-icons{
-    font-size:26;
-    color:#2980b9;
-}
-
-.boxcontainer i:hover{
-    background:#6ba6ce;
-    cursor:pointer;
-    clip-path:circle();
-    width:35px;
-    height:35px;
-}
