finally aligned everything on the explore page

--- a/surf/css/search.css
+++ b/surf/css/search.css
@@ -1,30 +1,28 @@
 .searching{
+    height: 100vh;
     display: flex;
-    flex-direction: column;
-    /* text-align: center; */
-    width: 100%;
+    /* width: 100vw; */
 }
 /* ***********Earth canvas on explore page********** */
 
 .search_earth{
-    margin: auto;
+    /* margin: auto; */
+    /* margin-top: 22vh ; */
+    /* position: absolute; */
+    position: static;
+    flex: 2;
     outline: none;
-    height: 500px;
-    width: 500px;
-    background-color: cadetblue;
+    height: 100%;
+    width: 70%;
+    /* background-color: rgb(125, 154, 155); */
 }
-@media screen and (max-width:768px){
-    .search_earth{
-        margin: none;
-        width: 100%;
-    }
-}
+
 /************Search bar*******/
 
 .search_bar{
-    margin:auto;
-    margin-top:20vh;
-    width:300px;
+    margin-top:40vh;
+    margin-right: 60px;
+    width:70%;
     height:42px;
     border:2px solid #2980b9;
     border-radius:50px;
@@ -48,7 +46,23 @@
     color:#424242;
     font-weight:500;
 }
+.search:focus{
+    background-color: none;
+}
 .search_bar input::-webkit-calendar-picker-indicator {
     display: none;
 }
 
+@media screen and (max-width:1024px){
+    .searching{
+        flex-direction: column-reverse;
+    }
+    .search_bar{
+        margin: 20vh auto 0 auto;
+        width: 300px;
+    }
+    .search_earth{
+        height: 80vh;
+        width: 100%;
+    }
+}
