--- a/surf/css/content.css
+++ b/surf/css/content.css
@@ -203,14 +203,11 @@
     border: none;
     background: none;
     font-size: 24px;
-    color: #8bc34a;
     cursor: pointer;
-    transition:.5s;
-
+    transition:.2s;
 }
 .actions button:hover{
-color: #4CAF50  ;
-transform: rotate(22deg)
+    opacity: 0.6;
 }
 /* BADGE CARD */
 .badge-card{
