--- a/surf/css/form.css
+++ b/surf/css/form.css
@@ -9,12 +9,13 @@ label {
     display: block;
     letter-spacing: 4px;
     padding-top: 30px;
-    text-align: left;
+    /* text-align: left; */
 }
 .label-text,.label-textarea {
     color:#000000;
     cursor: text;
     font-size: 20px;
+    font-weight: bold;
     line-height: 20px;
     text-transform: uppercase;
     transform: translateY(-34px);
@@ -61,7 +62,7 @@ label input {
     font-size: 36px;
     letter-spacing: -1px;
     outline: 0;
-    text-align: left;
+    /* text-align: left; */
     transition: all 0.3s;
     width: 100%;
 }
@@ -100,8 +101,38 @@ button:focus {
     outline: 0;
 }
 
+
 @media screen and (max-width:768px){
     .forms{
         width: 100%;
     }
+}
+
+/* ******EDIT PROFILE FORM */
+
+.about-text{
+    color: #000000;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: left;
+    transform: translateY(-30px);
+    font-size: 13px;
+}
+.editabout{
+    outline: none;
+    border:2px solid #000000;
+    font-size: 16px;
+    width: 100%;
+    height: 100px;
+    color: #000000;
+}
+.edit_profile{
+    flex: 1;
+    width: 100%;
+}
+.edit_profile input{
+    font-size: 18px;
+}
+.edit_profile label{
+    margin-top: 20px;
 }
